# geographiclib-fortran

./: .gitignore  CMakeLists.txt  HOWTO-RELEASE.txt  README.md
distrib-Fortran/: 00README.md
doc/: CMakeLists.txt  HEADER.html  doxyfile-for.in  doxyfile.in  geodesic-for.dox
src/: CMakeLists.txt  geodesic.for  geodesic.inc
tests/: CMakeLists.txt  geodtest.for  signtest.for
tools/: CMakeLists.txt  geodtest.for  planimeter.for
